Improved sum group functions